<resources>

    <!-- OverAll -->
    <string name="app_name" translatable="true">Walker</string>
    <string name="title_1" translatable="true">Exercises</string>
    <string name="title_2" translatable="true">Data</string>
    <string name="title_3" translatable="true">Profile</string>
    <string name="on" translatable="true">ON</string>
    <string name="off" translatable="true">OFF</string>

    <!-- Login -->
    <string name="login" translatable="true">log in</string>
    <string name="name" translatable="true">Name</string>
    <string name="Password" translatable="true">Password</string>

    <!-- Bluetooth -->
    <string name="bluetooth" translatable="true">Bluetooth</string>
    <string name="list" translatable="true">Paired devices</string>
    <string name="found" translatable="true">Discover devices</string>
    <string name="connected" translatable="true">Not connected</string>

    <!-- Exercises -->
    <string name="infoexercise" translatable="true">Walk on your personal rhythm</string>
    <string name="infoexercise1" translatable="true">Tones</string>
    <string name="infoexercise2" translatable="true">Voice</string>
    <string name="infoexercise3" translatable="true">Vibrations</string>
    <string name="empty">  </string>

    <!-- Data -->
    <string name="Walkinggait" translatable="true">Used gait method</string>
    <string name="gaitdata" translatable="true">3-points gait</string>

    <!-- Profile -->
    <string name="limb" translatable="true">Effected Limb</string>
    <string name="walkingaid" translatable="true">Walking-aid</string>
    <string name="nametherapist" translatable="true">Name therapist</string>
    <string name="messege" translatable="true">Messege from therapist</string>
    <string name="left" translatable="true">Left</string>
    <string name="right" translatable="true">Right</string>
    <string name="crutch" translatable="true">Crutch</string>
    <string name="stick" translatable="true">Stick</string>
    <string name="voice" translatable="true">Voice</string>
    <string name="tones" translatable="true">Tones</string>
    <string name="vibrations" translatable="true">Vibrations</string>
    <string name="graphsimpple" translatable="true">Basis</string>
    <string name="graphcomplete" translatable="true">Complete</string>
    <string name="visible" translatable="true">Visible</string>
    <string name="invisible" translatable="true">Invisible</string>
    <string name="mess" translatable="true">Messege</string>
    <string name="exercises" translatable="true">Exercises</string>
    <string name="data" translatable="true">Data</string>
    <string name="profile">Profile</string>

    <!-- Toasts -->
    <string name="toast_bluetoothdisabled" translatable="true">Bluetooth disabled</string>
    <string name="toast_bluetoothnotsupported" translatable="true">Bluetooth not supported</string>
    <string name="toast_bluetoothnenabled">Bluetooth enabled</string>
    <string name="toast_bluetoothnenablingcancelled" translatable="true">Bluetooth enabling cancelled</string>
    <string name="toast_nobluetoothconnection" translatable="true">No bluetooth connection</string>
    <string name="toast_exstart" translatable="true">Exercise starts in 1 minute</string>
    <string name="toast_exstop" translatable="true">Exercise stopped</string>
    <string name="toast_loginfailed" translatable="true">Name or password incorrect</string>

</resources>
