<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bluetooth">

    <ListView
        android:id="@+id/lv_bt"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list" />

    <ToggleButton
        android:id="@+id/btn_btstate"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bluetooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_bluetooth"
        app:layout_constraintVertical_bias="0.379" />

    <TextView
        android:id="@+id/tv_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:text="@string/bluetooth"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/list"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bluetooth" />

    <TextView
        android:id="@+id/connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Not connected"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_list"
        app:layout_constraintTop_toTopOf="@+id/tv_list" />

    <TextView
        android:id="@+id/readBuffer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="350dp"
        android:text="Incomming Data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bluetooth" />

    <include
        android:id="@+id/bluetoothStatus"
        layout="@layout/bottommenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>