<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercisespt2">

<include
    layout="@layout/bottommenu"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<!-- Exercise 1 -->

    <!-- Exercise 2 -->

    <ImageView
        android:id="@+id/iv_bg_exercise2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:padding="0.1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@android:color/background_light"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_exercise2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/infoexercise"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_bg_exercise2" />

    <TextView
        android:id="@+id/tv_info_ex_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/infoexercise2"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_exercise2" />

    <ToggleButton
        android:id="@+id/btn_ex_2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/toggle_start_stop"
        android:textOff="@string/empty"
        android:textOn="@string/empty"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bg_exercise2"
        app:layout_constraintEnd_toEndOf="@+id/iv_bg_exercise2"
        app:layout_constraintStart_toStartOf="parent" />

<!-- Exercise 3 -->

    <ImageButton
    android:id="@+id/btn_bluetooth"
    style="@android:style/Widget.Holo.ImageButton"
    android:layout_width="40dp"
    android:layout_height="50dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:background="@null"
    android:scaleType="centerInside"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/bluetooth" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:text="Button"
        android:textColor="@color/transparent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>